test/parser/var_param_error.dmz
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s

// CHECK: [[# @LINE + 1 ]]:14: error: expected parameter declaration
fn foo(const let: int) -> void {
}

fn main() -> void {
}
